[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/MagicAbilityController.gd" type="Script" id=1]
[ext_resource path="res://Items/MagicAbilities/Fireball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlaps/GroundCastCollision.tscn" type="PackedScene" id=3]

[node name="MagicAbilityController" type="Node2D"]
script = ExtResource( 1 )
MagicAbility = ExtResource( 2 )
GroundCastCollision = ExtResource( 3 )

[node name="CastPoint" type="Position2D" parent="."]
position = Vector2( 1, 0 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="MagicCaster" parent="." instance=ExtResource( 2 )]

[node name="AnimatedSprite" parent="MagicCaster" index="0"]
visible = false
frame = 0

[node name="Collision" parent="MagicCaster" index="1"]
shape = null

[node name="Collision" parent="MagicCaster/GroundCastCollisionTarget" index="0"]
shape = null

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="MagicCaster"]
[editable path="MagicCaster/GroundCastCollisionTarget"]
